--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.427.0",
     "pocketbase": "^0.21.4",
+    "svelte-pdf-simple": "^2.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1"
   }
