--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "bits-ui": "^0.21.13",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-svelte": "^0.427.0",
     "pocketbase": "^0.21.4",
     "svelte-pdf-simple": "^2.0.0",
