--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@internationalized/date": "^3.5.5",
     "bits-ui": "^0.21.13",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
