--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/typography": "^0.5.14",
     "@types/eslint": "^9.6.0",
+    "@types/lodash": "^4.17.7",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -40,6 +41,7 @@
     "bits-ui": "^0.21.13",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "lucide-svelte": "^0.427.0",
     "pocketbase": "^0.21.4",
     "svelte-pdf-simple": "^2.0.0",
