--- a/apps/doc-ninja-app/package.json
+++ b/apps/doc-ninja-app/package.json
@@ -27,11 +27,11 @@
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "svelte": "^5.0.0-next.1",
+    "svelte": "5.0.0-next.243",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
-    "typescript-eslint": "^8.0.0",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.0.3",
     "vitest": "^2.0.0"
   },
