--- a/apps/doc-ninja-app/package.json
+++ b/apps/doc-ninja-app/package.json
@@ -43,8 +43,10 @@
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "lucide-svelte": "^0.427.0",
+    "mode-watcher": "^0.4.1",
     "pocketbase": "^0.21.4",
     "svelte-pdf-simple": "^2.0.0",
+    "svelte-sonner": "^0.3.27",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1"
   }
