--- a/apps/smtp-inbox/package.json
+++ b/apps/smtp-inbox/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doc-ninja-smtp-inbox",
+  "name": "@doc-ninja/smtp-inbox",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
