--- a/packages/data-layer/package.json
+++ b/packages/data-layer/package.json
@@ -5,5 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0"
+  },
+  "dependencies": {
+    "pocketbase": "^0.21.4"
   }
 }
