--- a/apps/doc-ninja-app/package.json
+++ b/apps/doc-ninja-app/package.json
@@ -47,6 +47,7 @@
     "svelte-pdf-simple": "^2.0.0",
     "svelte-sonner": "^0.3.27",
     "tailwind-merge": "^2.5.2",
+    "@doc-ninja/data-layer": "workspace:*",
     "tailwind-variants": "^0.2.1"
   }
 }
