--- a/packages/data-layer/package.json
+++ b/packages/data-layer/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
-    "pocketbase": "^0.21.4"
+    "pocketbase": "^0.21.4",
+    "@internationalized/date": "^3.5.5"
   }
 }
